// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wireframe: WireframeAnnotationsNotes should render correctly 1`] = `
<WireframeAnnotationsNotesContainer
  tabIndex={0}
>
  <li
    className=""
    data-annotation-id={1}
    key="1"
  >
    <WireframeAnnotationsNote
      annotation={
        Object {
          "Component": [MockFunction],
          "count": 1,
          "id": 1,
          "options": Object {
            "description": "Test description",
            "title": "Test component",
          },
        }
      }
    />
  </li>
</WireframeAnnotationsNotesContainer>
`;

exports[`Wireframe: WireframeAnnotationsNotes should render correctly with highlight 1`] = `
<WireframeAnnotationsNotesContainer
  tabIndex={0}
>
  <li
    className="highlight"
    data-annotation-id={1}
    key="1"
  >
    <WireframeAnnotationsNote
      annotation={
        Object {
          "Component": [MockFunction],
          "count": 1,
          "id": 1,
          "options": Object {
            "description": "Test description",
            "title": "Test component",
          },
        }
      }
    />
  </li>
</WireframeAnnotationsNotesContainer>
`;
